--- a/style.css
+++ b/style.css
@@ -867,7 +867,7 @@ h4 {
     .b-parallax {
         background-attachment: scroll;
     }
-    .page-container,
+    body,
     #hero-bloc {
         overflow-x: hidden;
         position: relative;
@@ -890,7 +890,7 @@ h4 {
 }
 
 @media (max-width: 767px) {
-    .page-container {
+    body{
         overflow-x: hidden;
         position: relative;
     }
@@ -1039,4 +1039,10 @@ h4 {
     .bloc-mob-center-text {
         text-align: center;
     }
+}
+
+/* MOFICATIONS */
+
+#bloc-3-what-i-do{
+    text-align: center;
 }
